WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
98445
[V8] NotificationCenter leaks because it uses buggy custom bindings
https://bugs.webkit.org/show_bug.cgi?id=98445
Summary
[V8] NotificationCenter leaks because it uses buggy custom bindings
Adam Barth
Reported
2012-10-04 13:25:02 PDT
[V8] NotificationCenter leaks because it uses buggy custom bindings
Attachments
Patch
(3.67 KB, patch)
2012-10-04 13:25 PDT
,
Adam Barth
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adam Barth
Comment 1
2012-10-04 13:25:35 PDT
Created
attachment 167164
[details]
Patch
WebKit Review Bot
Comment 2
2012-10-04 17:36:59 PDT
Comment on
attachment 167164
[details]
Patch Rejecting
attachment 167164
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 2 Last 500 characters of output: ng Source/WebCore/ChangeLog CONFLICT (content): Merge conflict in Source/WebCore/ChangeLog Failed to merge in the changes. Patch failed at 0001 Unreviewed, rolling out
r130419
. When you have resolved this problem run "git rebase --continue". If you would prefer to skip this patch, instead run "git rebase --skip". To restore the original branch and stop rebasing run "git rebase --abort". rebase refs/remotes/origin/master: command returned error: 1 Died at Tools/Scripts/update-webkit line 164. Full output:
http://queues.webkit.org/results/14178263
WebKit Review Bot
Comment 3
2012-10-04 19:05:39 PDT
Comment on
attachment 167164
[details]
Patch Rejecting
attachment 167164
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 2 Last 500 characters of output: hangeLog Failed to merge in the changes. Patch failed at 0001 Font::glyphDataAndPageForCharacter doesn't account for text orientation when using systemFallback on a cold cache. When you have resolved this problem run "git rebase --continue". If you would prefer to skip this patch, instead run "git rebase --skip". To restore the original branch and stop rebasing run "git rebase --abort". rebase refs/remotes/origin/master: command returned error: 1 Died at Tools/Scripts/update-webkit line 164. Full output:
http://queues.webkit.org/results/14181198
Adam Barth
Comment 4
2012-10-04 19:18:25 PDT
Comment on
attachment 167164
[details]
Patch Clearing flags on attachment: 167164 Committed
r130446
: <
http://trac.webkit.org/changeset/130446
>
Adam Barth
Comment 5
2012-10-04 19:18:27 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug