[V8] NotificationCenter leaks because it uses buggy custom bindings https://bugs.webkit.org/show_bug.cgi?id=98445

Reviewed by Tony Chang.

There's no reason to use custom bindings here. All they do is cause leaks..

* Modules/notifications/NotificationCenter.idl:
* bindings/v8/custom/V8NotificationCenterCustom.cpp:


Canonical link: https://commits.webkit.org/116440@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@130446 268f45cc-cd09-0410-ab3c-d52691b4dbfc